--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "setup-production":"npm run install-client && npm run build-client && npm install",
+    "install-client":"cd client && npm install",
     "build-client": "cd client && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon server --ignore client",
@@ -16,7 +18,7 @@
     "url": "git+https://github.com/chiragdudhat/Jobify.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Chirag Dudhat",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/chiragdudhat/Jobify/issues"
